refactor: clean up imports and standardize field naming conventions in request and repository classes
Signed-off-by: kabi175 <kabilan.mee@gmail.com>